agregando la eliminacion logica desde el frontend

--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -43,19 +43,19 @@
                     <li><a class="dropdown-item" (click)="datos_baja_ftd()">FTD</a></li>
                     <li><a class="dropdown-item" (click)="dados_baja()">Personales</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item">Universidad</a></li>
-                    <li><a class="dropdown-item">Modalidad Escolar</a></li>
-                    <li><a class="dropdown-item">Plan Educativo</a></li>
-                    <li><a class="dropdown-item">Periodo</a></li>
+                    <li><a class="dropdown-item" (click)="baja_universidad()">Universidad</a></li>
+                    <li><a class="dropdown-item" (click)="baja_modalidad_escolar()">Modalidad Escolar</a></li>
+                    <li><a class="dropdown-item" (click)="baja_plan_educativo()">Plan Educativo</a></li>
+                    <li><a class="dropdown-item" (click)="baja_periodo()">Periodo</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item">Perfilamiento</a></li>
-                    <li><a class="dropdown-item">Trámite</a></li>
-                    <li><a class="dropdown-item">Modalidad</a></li>
+                    <li><a class="dropdown-item" (click)="baja_perfilamiento()">Perfilamiento</a></li>
+                    <li><a class="dropdown-item" (click)="baja_tramite()">Trámite</a></li>
+                    <li><a class="dropdown-item" (click)="baja_modalidad()">Modalidad</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item">Beca</a></li>
-                    <li><a class="dropdown-item">Grupo</a></li>
-                    <li><a class="dropdown-item">Tutor</a></li>
-                    <li><a class="dropdown-item">Curso</a></li>
+                    <li><a class="dropdown-item" (click)="baja_beca()">Beca</a></li>
+                    <li><a class="dropdown-item" (click)="baja_grupo()">Grupo</a></li>
+                    <li><a class="dropdown-item" (click)="baja_tutor()">Tutor</a></li>
+                    <li><a class="dropdown-item" (click)="baja_curso()">Curso</a></li>
                 </ul>
         </div>
 </div>
