--- a/frontend/recursos/src/app/components/alumno/barra-alumno/barra-alumno.component.html
+++ b/frontend/recursos/src/app/components/alumno/barra-alumno/barra-alumno.component.html
@@ -3,9 +3,8 @@
     <div class="btn-group w-100 mt-5" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-secondary border-0">Reporte de Asistencia</button>
         <button type="button" class="btn btn-secondary border-0" type="file">Reporte de Actividades</button>
-        <a href="ruta/a/tu/archivo.pdf" target="_blank" class="btn btn-secondary border-0">Reporte de Actividades</a>
-        <button type="button" class="btn btn-secondary border-0" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">Firma</button>
+        <a href="../../../archivos-mensuales/Formato-Reporte-de-actividades-2023-Residencias - AGOSTO.pdf" target="_blank" class="btn btn-secondary border-0">Reporte de Actividades</a>
+        <button type="button" class="btn btn-secondary border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">Firma</button>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
