--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
@@ -7,7 +7,7 @@
     <!-- Titiulo -->
     <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Universidad</h1>
 
-    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-universidad" *ngIf="!uni.id else elseBlock">Agregar Plan Educativo</button>
+    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-universidad" *ngIf="!uni.id else elseBlock">Agregar Universidad</button>
     <ng-template #elseBlock>
         <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-universidad">Editar</button>
     </ng-template>
@@ -42,12 +42,12 @@
             <div class="col-1">ID</div>
             <div class="col-7">Nombre de la Universidad</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let univ of universidad">
-            <div class="row text-center" *ngIf="univ.activo == true">
+            <div class="row text-center">
                 <div class="col-1">{{univ.id}}</div>
                 <div class="col-7">{{univ.nombre}}</div>
 
