--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/periodo/periodo.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/periodo/periodo.component.html
@@ -42,12 +42,12 @@
             <div class="col-1">ID</div>
             <div class="col-7">Nombre de la Universidad</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Dar de Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let periodo of periodos">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="periodo.activo == true">
                 <div class="col-1">{{periodo.id}}</div>
                 <div class="col-7">{{periodo.nombre}}</div>
 
@@ -55,7 +55,7 @@
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/datos-escolares/periodo', periodo.id]" data-bs-toggle="modal" data-bs-target="#modal-plan">Editar</button>
 
                 
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="delete(periodo)">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="delete(periodo)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
