--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
@@ -47,7 +47,7 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let univ of universidad">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="univ.activo==true">
                 <div class="col-1">{{univ.id}}</div>
                 <div class="col-7">{{univ.nombre}}</div>
 
