--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/cursos/cursos.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/cursos/cursos.component.html
@@ -47,12 +47,12 @@
             <div class="col-1">ID</div>
             <div class="col-7">Nombre del Tipo de Beca</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Dar de Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let curso of curso">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="curso.activo == true">
                 <div class="col-1">{{curso.id}}</div>
                 <div class="col-7">{{curso.nombre}}</div>
 
@@ -62,7 +62,7 @@
                     [routerLink]="['/datos-ftd/cursos', curso.id]">Editar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
-                    (click)="delete(curso)">Eliminar</button>
+                    (click)="delete(curso)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
