--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/tutor/tutor.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/tutor/tutor.component.html
@@ -49,12 +49,12 @@
             <div class="col-1">ID</div>
             <div class="col-7">Nombre del Tipo de Beca</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Dar de Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let tutores of tutor">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="tutores.activo == true">
                 <div class="col-1">{{tutores.id}}</div>
                 <div class="col-7">{{tutores.nombre}}</div>
 
@@ -64,7 +64,7 @@
                     [routerLink]="['/datos-ftd/tutor', tutores.id]">Editar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
-                    (click)="delete(tutores)">Eliminar</button>
+                    (click)="delete(tutores)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
