--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
@@ -42,19 +42,19 @@
             <div class="col-1">ID</div>
             <div class="col-7">Nombre del Trámite</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Dar de Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let tra of tramite">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="tra.activo == true">
                 <div class="col-1">{{tra.id}}</div>
                 <div class="col-7">{{tra.nombreTramite}}</div>
 
                 <!-- Editar perfilamiento -->
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1"  data-bs-toggle="modal" data-bs-target="#modal-tramite" [routerLink]="['/datos-ingreso/tramite', tra.id]">Editar</button>
                 
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteTramite(tra)">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteTramite(tra)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
