--- a/frontend/recursos/src/app/components/admin/panel-admin/escolares-baja/modalidad-escolar-baja/modalidad-escolar-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/escolares-baja/modalidad-escolar-baja/modalidad-escolar-baja.component.html
@@ -12,19 +12,19 @@
             <div class="col-1">ID</div>
             <div class="col-7">Tipo de Modalidad</div>
             <div class="col-2">Editar</div>
-            <div class="col-2">Eliminar</div>
+            <div class="col-2">Dar de Alta</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let mod of modalidad">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="mod.activo === false">
                 <div class="col-1">{{mod.id}}</div>
                 <div class="col-7">{{mod.nombre}}</div>
 
                 <!-- Editar universidad -->
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" data-bs-toggle="modal" [routerLink]="['/datos-escolares/modalidad-escolar', mod.id]"data-bs-target="#modal-modalidad">Editar</button>
 
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="delete(mod)">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="delete(mod)">Dar de Alta</button>
             </div>
         </tbody>
     </table>
