--- a/frontend/recursos/src/app/components/admin/panel-admin/escolares-baja/periodo-baja/periodo-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/escolares-baja/periodo-baja/periodo-baja.component.html
@@ -17,12 +17,12 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let periodo of periodos">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="periodo.activo == false">
                 <div class="col-1">{{periodo.id}}</div>
                 <div class="col-7">{{periodo.nombre}}</div>
 
                 <!-- Editar planEducativo -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1">Elimiinar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" (click)="eliminarPeriodo(periodo)">Elimiinar</button>
 
                 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="delete(periodo)">Mover</button>
