--- a/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/beca-baja/beca-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/beca-baja/beca-baja.component.html
@@ -16,12 +16,12 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let beca of becas">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="beca.activo == false">
                 <div class="col-1">{{beca.id}}</div>
                 <div class="col-7">{{beca.nombre}}</div>
 
                 <!-- Editar perfilamiento -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" (click)="eliminar(beca)">Eliminar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
                     (click)="delete(beca)">Mover</button>
