--- a/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/curso-baja/curso-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/curso-baja/curso-baja.component.html
@@ -17,12 +17,12 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let curso of curso">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="curso.activo == false">
                 <div class="col-1">{{curso.id}}</div>
                 <div class="col-7">{{curso.nombre}}</div>
 
                 <!-- Editar perfilamiento -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" (click)="eliminar(curso)">Eliminar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
                     (click)="delete(curso)">Activar</button>
