--- a/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/grupo-baja/grupo-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/grupo-baja/grupo-baja.component.html
@@ -18,12 +18,12 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let grupo of grupo">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="grupo.activo == false">
                 <div class="col-1">{{grupo.id}}</div>
                 <div class="col-7">{{grupo.nombre}}</div>
 
                 <!-- Editar perfilamiento -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" (click)="eliminar(grupo)">Eliminar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1"
                     (click)="delete(grupo)">Mover</button>
