--- a/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/perfilamiento-baja/perfilamiento-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/perfilamiento-baja/perfilamiento-baja.component.html
@@ -18,12 +18,12 @@
     </div>
     <table class="table table-striped mt-3">
         <tbody *ngFor="let perfilamiento of perfilamiento">
-            <div class="row text-center">
+            <div class="row text-center" *ngIf="perfilamiento.activo == false">
                 <div class="col-1">{{perfilamiento.id}}</div>
                 <div class="col-7">{{perfilamiento.nombrePerfilamiento}}</div>
 
                 <!-- Editar perfilamiento -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" (click)="eliminarPerfilamiento(perfilamiento)">Eliminar</button>
 
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deletePerfilamineto(perfilamiento)">Mover</button>
             </div>
