--- a/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
@@ -31,8 +31,8 @@
                 <div class="col-2">{{Alumno.nombres}}</div>
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-3"(click)="deleteEstudiante(Alumno.id)">Dar Alta</button>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-3">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-3"(click)="deleteEstudiante(Alumno)">Dar Alta</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-3" (click)="eliminarAlumno(Alumno)">Eliminar</button>
             </div>
         </tbody>
     </table>
