--- a/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/ingreso-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ingreso-baja/ingreso-baja.component.html
@@ -32,7 +32,7 @@
                 <div class="col-2">{{ingreso.perfilamiento.nombrePerfilamiento}}</div>
                 <div class="col-2">{{ingreso.modalidad.nombre}}</div>
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col text-white mt-3" (click)="activated(ingreso)">Dar Alta</button>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-3">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-3" (click)="eliminar(ingreso)">Eliminar</button>
             </div>
         </tbody>
     </table>
