--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -34,7 +34,7 @@
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 col text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col mt-1" (click) ="deleteEstudiante(Alumno.id)">Dar de Baja</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col mt-1" (click) ="deleteEstudiante(Alumno)">Dar de Baja</button>
                 <button type="button" class="btn btn-danger btn-sm border-0 me-1 text-white col mt-1" (click)="registrarDatosFTD()">Registrar Datos FTD</button>
             </div>
         </tbody>
