upload and download the documents

--- a/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
+++ b/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
@@ -1,3 +1,45 @@
 <app-navv></app-navv>
 
 <app-barra-alumno></app-barra-alumno>
+
+<div class="container mt-3">
+    <h2 class="text-primary mb-4">Documentos Mensuales</h2>
+  
+    <!-- Add Document Form -->
+    <div class="mb-4">
+      <label for="fileInput" class="form-label">Subir Archivo</label>
+      <input type="file" id="fileInput" class="form-control" (change)="onFileSelected($event)" />
+  
+      <div class="row mt-3">
+        <div class="col-md-6 mb-3">
+          <label for="nameInput" class="form-label">Nombre</label>
+          <input type="text" id="nameInput" class="form-control" placeholder="Enter Name" [(ngModel)]="newName" />
+        </div>
+  
+  
+        <div class="col-md-6 mb-3">
+          <label for="statusInput" class="form-label">Status</label>
+          <input type="text" id="statusInput" class="form-control" placeholder="Enter Status" [(ngModel)]="newStatus" />
+        </div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="typeInput" class="form-label">Servicio</label>
+        <input type="text" id="typeInput" class="form-control" placeholder="Enter Document Type" [(ngModel)]="newDocumentType" />
+      </div>
+  
+      <button class="btn btn-primary" (click)="addDocument()">Subir</button>
+    </div>
+  
+    <!-- src/app/document/document.component.html -->
+  
+  <ul class="list-group">
+    <li *ngFor="let document of documents" class="list-group-item">
+      {{ document.name }} ({{ document.documentType }}) - {{ document.status }}
+      <a routerLink="/documents/{{ document.id }}" class="btn btn-primary btn-sm float-end mx-1">Detalles</a>
+      <button class="btn btn-danger btn-sm float-end mx-1" (click)="deleteDocument(document.id)">Eliminar</button>
+      <button class="btn btn-warning btn-sm float-end mx-1" (click)="updateDocument(document.id)">Modificar</button>
+    </li>
+  </ul>
+  
+  
