added the class revision with components

--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -33,6 +33,7 @@
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Documentos Mensuales</button>
+        <button type="button" class="btn btn-primary border-0" (click)="revision()">Revisiòn de Documentos</button>
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
                     Dados de Baja
