--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
@@ -76,7 +76,11 @@
         </div>
         <div class="col-md-4 mt-4">
             <label class="form-label">Correo Becario</label>
-            <input type="text" class="form-control" placeholder="Correo del Becario" id="correoBecario" name="correoBecario" [(ngModel)]="datosFTD.correoBecario">
+            <input type="text" class="form-control" placeholder="Correo del Becario" id="correoBecario" name="correoBecario" [(ngModel)]="usuario.username">
+        </div>
+        <div class="col-md-4 mt-4">
+            <label class="form-label">Password</label>
+            <input type="password" class="form-control" placeholder="Contraseña del correo" id="correoBecario" name="correoBecario" [(ngModel)]="usuario.password">
         </div>
         <div class="col-md-3 position-relative mt-4">
             <label for="estatusTramite" class="form-label">Estatus del Trámite</label>
@@ -93,7 +97,7 @@
             </select>
         </div>
         <!-- boton -->
-        <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="crear()" *ngIf="!datosFTD.id else elseBlock">Registrar</button>
+        <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="registro()" (click)="crear()" *ngIf="!datosFTD.id else elseBlock">Registrar</button>
         <ng-template #elseBlock>
             <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="update()">Actualizar</button>
         </ng-template>
