--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -14,6 +14,8 @@
     <h1 class="mt-1 font-weight-bold mb-4 text-center col-title">Datos Personales</h1>
     <div>
         <button class="btn btn-danger btn-sm border-0 text-white me-1 col-1 mt-3" (click)="getAlumno()">Detalles</button>
+        <button class="btn btn-primary btn-sm border-0 me-1 col-2 mt-3" (click)="generarPDF()">Generaciòn de PDF</button>
+        <button class="btn btn-secondary btn-sm border-0 me-1 col-2 mt-3" (click)="generarExcel()">Generaciòn de Excel</button>
     </div>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
