--- a/frontend/recursos/src/app/components/alumno/panel-alumno/document-detail/document-detail.component.html
+++ b/frontend/recursos/src/app/components/alumno/panel-alumno/document-detail/document-detail.component.html
@@ -5,6 +5,7 @@
       <h2 class="col-title text-center">Documentos </h2>
     </div>
     <div class="card-body">
+      <h1>Mi nombre es:{{alumn.nombres}}</h1>
       <div class="mb-3">
         <h4 class="card-title">{{ document.name }}</h4> <br>
         <p class="card-text"><strong>Estatus:</strong> {{ document.status }}</p>
