--- a/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
+++ b/frontend/recursos/src/app/components/alumno/panel-alumno/panel-alumno.component.html
@@ -13,19 +13,19 @@
       <div class="row mt-3">
         <div class="col-md-6 mb-3">
           <label for="nameInput" class="form-label">Nombre</label>
-          <input type="text" id="nameInput" class="form-control" placeholder="Enter Name" [(ngModel)]="newName" />
+          <input type="text" id="nameInput" class="form-control" placeholder="Escribe el Nombre" [(ngModel)]="newName" />
         </div>
   
   
         <div class="col-md-6 mb-3">
-          <label for="statusInput" class="form-label">Status</label>
-          <input type="text" id="statusInput" class="form-control" placeholder="Enter Status" [(ngModel)]="newStatus" />
+          <label for="statusInput" class="form-label">Estatus</label>
+          <input type="text" id="statusInput" class="form-control" [(ngModel)]="newStatus" disabled/>
         </div>
       </div>
   
       <div class="mb-3">
         <label for="typeInput" class="form-label">Servicio</label>
-        <input type="text" id="typeInput" class="form-control" placeholder="Enter Document Type" [(ngModel)]="newDocumentType" />
+        <input type="text" id="typeInput" class="form-control" placeholder="¿De que es tu documento?" [(ngModel)]="newDocumentType" />
       </div>
   
       <button class="btn btn-primary border-0" (click)="addDocument()">Subir</button>
