--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
@@ -10,6 +10,8 @@
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
     </form>
     <button class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" (click)="obtenerEscolares()">Detalles</button>
+    <button class="btn btn-primary btn-sm border-0 text-white me-1 mt-3" (click)="generarPDF()">Generaciòn De PDF</button>
+    <button class="btn btn-secondary btn-sm border-0 text-white mt-3" (click)="generarExcel()">Generaciòn De Excel</button>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
